force-app/main/default/objects/Case_Presence_Log__c/Case_Presence_Log__c.object-meta.xml
<CustomObject>
    <label>Case Presence Log</label>
    <pluralLabel>Case Presence Logs</pluralLabel>
    <nameField>
        <displayFormat>CPL-{0000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Stores current presence state for users viewing cases</description>
</CustomObject>