force-app/main/default/objects/Case_Presence_Log__c/fields/Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Id__c</fullName>
    <label>Case ID</label>
    <description>Reference to the Case being viewed</description>
    <type>Text</type>
    <length>18</length>
    <required>true</required>
</CustomField>