force-app/main/default/objects/Case_Presence_Log__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <label>Case Number</label>
    <description>Case number for display purposes</description>
    <type>Text</type>
    <length>50</length>
</CustomField>