force-app/main/default/objects/Case_Presence_Log__c/fields/Has_Draft__c.field-meta.xml
<CustomField>
    <fullName>Has_Draft__c</fullName>
    <label>Has Draft</label>
    <description>Whether the user has a draft</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>