force-app/main/default/objects/Case_Presence_Log__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <description>Whether the user's tab is currently focused</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>