force-app/main/default/objects/Case_Presence_Log__c/fields/Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated__c</fullName>
    <label>Last Updated</label>
    <description>Timestamp of last state change</description>
    <type>DateTime</type>
    <required>true</required>
</CustomField>