force-app/main/default/objects/Case_Presence_Log__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <label>Session ID</label>
    <description>Unique session identifier for this browser tab</description>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
</CustomField>