force-app/main/default/objects/Case_Presence_Log__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <description>Current presence state: active, idle, drafting, gone</description>
    <type>Text</type>
    <length>50</length>
    <required>true</required>
</CustomField>