force-app/main/default/objects/Case_Presence_Log__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <label>User ID</label>
    <description>ID of the user viewing the case</description>
    <type>Text</type>
    <length>18</length>
    <required>true</required>
</CustomField>