force-app/main/default/objects/Case_Presence_Log__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <label>User Name</label>
    <description>Full name of the user viewing the case</description>
    <type>Text</type>
    <length>255</length>
</CustomField>